--- a/src/web/css/chopper-main.css
+++ b/src/web/css/chopper-main.css
@@ -26,10 +26,12 @@ h1, h2, h3, h4, h5, h6 {
   top: 0;
   width: 100%;
   z-index: 200;
+  height: 300px;
 }
 
 @media (min-width: 768px) {
   #main-sidebar {
+    height: 100%;
     width: 240px;
     bottom: 0;
     max-height: 100%;
@@ -38,6 +40,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #sidebar-wrapper {
   position: absolute;
+  overflow: scroll;
   z-index: 250;
   max-height: 100%;
   width: 100%;
